--- a/charts/core-edge/templates/dcs-deployment.yaml
+++ b/charts/core-edge/templates/dcs-deployment.yaml
@@ -23,7 +23,7 @@ spec:
           {{- if .Values.dcs.image.tag }}
           image: {{ .Values.dcs.image.repository }}:{{ .Values.dcs.image.tag }}
           {{- else }}
-          image: {{ .Values.dcs.image.repository }}:latest
+          image: {{ .Values.dcs.image.repository }}:{{ .Values.dcs.image.tag }}
           {{- end }}
           resources:
             {{- toYaml .Values.dcs.resources | nindent 12 }}
