--- a/charts/core-edge/values.yaml
+++ b/charts/core-edge/values.yaml
@@ -17,8 +17,8 @@ scs:
 
 keymanager:
   replicaCount: 1
+  tag: latest
   image:
-    tag: sha256:3d8497fbce80d23bc4e2de03e122af210ed888b3aec9febfa58fe5e25077e205
     repository: ghcr.io/htaic/edgekeymanagerrun
     env:
       - name: edgeId
@@ -26,7 +26,7 @@ keymanager:
   resources:
     requests:
       cpu: 150m
-      memory: 450Mi
+      memory: 250Mi
 
 edgeccs:
   replicaCount: 1
