--- a/charts/kafka-rest-producer-service/values.yaml
+++ b/charts/kafka-rest-producer-service/values.yaml
@@ -12,6 +12,8 @@ image:
       value: "12"
     - name: KAFKA_REST_URL
       value: KAFKA_REST_PROXY_URL # this value is different between cloud and edge (edge has to go throuh internet to reach Traefik. In cloud, requests are made to Traefik's internal endpoint)
+    - name: GROUP_NAME
+      value: VkO702nqja   
     - name: LOG_LEVEL
       value: DEBUG
     - name: LOG_SINK
