--- a/charts/hasura/values.yaml
+++ b/charts/hasura/values.yaml
@@ -4,10 +4,10 @@ replicaCount: 1
 postgresProvisioner:
   image: ghcr.io/htaic/anaheim-graphql-postgres-provisioner
 # these are in baselines now
-  # databaseName: graphql
-  # databaseUser: YOUR_HASURA_USER
-  # databasePassword: YOUR_HASURA_PASSWORD
-  # databaseHost: YOUR_POSTGRES_HOST
+# databaseName: graphql
+# databaseUser: YOUR_HASURA_USER
+# databasePassword: YOUR_HASURA_PASSWORD
+# databaseHost: YOUR_POSTGRES_HOST
 
 # authServiceCookieOptionsDomain: YOUR_K8S_DOMAIN
 # hasuraToken: YOUR_ADMIN_SECRET
@@ -19,7 +19,7 @@ image:
   containerPort: 8080
   hostname: hasura
   env:
-      ## enable the console served by server
+    ## enable the console served by server
     - name: HASURA_GRAPHQL_ENABLE_CONSOLE
       value: "true" # set to "false" to disable console
       ## enable debugging mode. It is recommended to disable this in production
@@ -36,8 +36,10 @@ image:
     - name: HASURA_GRAPHQL_AUTH_HOOK_MODE
       value: POST
     - name: EVENTBRIDGE_HOSTNAME
-      value: http://anaheim-eventbridge:9877  
-     
+      value: http://anaheim-eventbridge:9877
+    - name: AUTHENTICATION_HOSTNAME
+      value: http://anaheim-graphql-service-anaheim-authentication-service:9876
+
 imagePullSecrets:
   - name: dockerconfigjson-github-com
 
