--- a/charts/anaheim-ai-boxify-service/values.yaml
+++ b/charts/anaheim-ai-boxify-service/values.yaml
@@ -19,6 +19,8 @@ image:
     configMapRefs:
       - aws-account-configmap
   env:
+    - name: ENVIRONMENT
+      value: " "  
     - name: HOSTNAME
       value: "anaheim-ai-boxify-service"
     - name: LOG_LEVEL
