--- a/charts/anaheim-eventbridge/values.yaml
+++ b/charts/anaheim-eventbridge/values.yaml
@@ -15,6 +15,8 @@ image:
     configMapRefs:
       - aws-account-configmap
   env:
+    - name: ENVIRONMENT
+      value: " "  
     - name: SERVICEHOST
       value: "anaheim-eventbridge"
     - name: SERVICEPORT
