--- a/charts/anaheim-feature-flags-service/values.yaml
+++ b/charts/anaheim-feature-flags-service/values.yaml
@@ -16,6 +16,8 @@ image:
   readinessProbe: healthcheck
   hostname: anaheim-feature-flags-service
   env:
+    - name: ENVIRONMENT
+      value: " "  
     - name: GRAPHQLURL
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
 
