--- a/charts/anaheim-eventbridge/Chart.yaml
+++ b/charts/anaheim-eventbridge/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: anaheim-eventbridge
 description: A Helm chart for Kubernetes anaheim-eventbridge deployed behind a traefik ingress
 
-# A chart can be either an 'application' or a 'library' chart.
+# A chart can be either an 'application' or a 'library' chart.1
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
 # to be deployed.
