--- a/charts/anaheim-eventbridge/Chart.yaml
+++ b/charts/anaheim-eventbridge/Chart.yaml
@@ -3,7 +3,7 @@ name: anaheim-eventbridge
 description: A Helm chart for Kubernetes anaheim-eventbridge deployed behind a traefik ingress
 
 # A chart can be either an 'application' or a 'library' chart.1
-#
+#Anil test
 # Application charts are a collection of templates that can be packaged into versioned archives
 # to be deployed.
 #
